# Medical_manager_helper

./: README.md  compose.yaml
back/: Dockerfile  alembic.ini  parse.py  pyproject.toml  requirements.txt
back/app/server/: app.py  database.py
back/app/server/controllers/: diagnosis.py
back/app/server/file_builders/: docx.py  word.py
back/app/server/models/: diagnosis.py
back/app/server/readers/: pdf.py  xslx.py
back/app/server/routes/: diagnosis.py
back/migrations/: env.py
back/migrations/versions/: 1ddf9071d6f2_initial.py
back/src/api/rest/: main.py
back/src/api/rest/v1/: __init__.py
back/src/api/rest/v1/auth/: exception.py  router.py
back/src/config/: admin.py  app.py  auth.py  postgres.py  redis.py
back/src/database/postgres/: connection.py
back/src/database/redis/: connection.py  depends.py
back/src/domain/abc/: dal.py  dto.py
back/src/domain/authentication/: dal.py  depends.py  dto.py  service.py
back/src/domain/user/: dal.py  depends.py  dto.py  model.py  service.py
back/src/ui/html/auth/: admin.py
back/src/ui/html/user/: admin.py
back/src/utils/: generator.py  time.py
front/: package.json
front/.nginx/: nginx.conf
front/public/: index.html
front/src/: App.js  App.module.scss
front/src/Components/Diagram/DoughnutDiagram/: DoughnutDiagram.jsx
front/src/Components/Diagram/HorizontalDiagram/: HorizontalDiagram.jsx
front/src/Components/Diagram/LineDiagram/: LineDiagram.jsx
front/src/Components/Header/: Header.jsx  Header.module.scss
front/src/Components/Navbar/: Navbar.css  Navbar.jsx  Navbar.module.scss
front/src/Components/Pages/Dashboard/: Dashboard.jsx  Dashboard.module.scss
front/src/redux/: actions.js  main-reducer.js
(+6 files in other folders)
